v1.7.1 - Fix carousel button alignment
- Fixed arrow icons appearing too high in Prev/Next buttons
- Added vertical-align: middle to dashicons
- Added margin-top: -2px for perfect alignment
- Cleaner, more professional appearance

--- a/admin/css/sim-admin.css
+++ b/admin/css/sim-admin.css
@@ -2,7 +2,7 @@
  * Filename: sim-admin.css
  * Author: Krafty Sprouts Media, LLC
  * Created: 12/10/2025
- * Version: 1.1.0
+ * Version: 1.1.1
  * Last Modified: 12/10/2025
  * Description: Admin styles for Smart Image Matcher modal and UI with carousel controls
  */
@@ -171,6 +171,8 @@
     font-size: 16px;
     width: 16px;
     height: 16px;
+    vertical-align: middle;
+    margin-top: -2px;
 }
 
 .sim-carousel-prev:disabled,
